# PgDbo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build  build-config  config.cmake
.settings_template/: language.settings.xml
cmake/: FindGoogleTest.cmake  FindPostgresql.cmake  version.cmake
cmake/config/: linker-clang.cmake  linker-gold.cmake  profiler-AddressSanitizer.cmake  profiler-LeakSanitizer.cmake  profiler-callgrind.cmake  profiler-ftrace.cmake  profiler-tcmalloc.cmake
dbo/: CMakeLists.txt  Call.cpp  Call.h  Call_impl.h  DbAction.cpp  DbAction.h  DbAction_impl.h  Dbo.h  Exception.cpp  Exception.h  Field.h  Field_impl.h  FixedSqlConnectionPool.cpp  FixedSqlConnectionPool.h  Impl.h  PostgisSqlTraits.cpp  PostgisSqlTraits.h  Query.cpp  Query.h  Query_impl.h  Session.cpp  Session.h  Session_impl.h  SqlConnection.cpp  SqlConnection.h  SqlConnectionPool.cpp  SqlConnectionPool.h  SqlQueryParse.cpp  SqlStatement.cpp  SqlStatement.h  SqlTraits.cpp  SqlTraits.h  SqlTraits_impl.h  StdSqlTraits.cpp  StdSqlTraits.h  Transaction.cpp  Transaction.h  Types.h  collection.cxx  collection.h  (+30 more)
dbo-tests/: CMakeLists.txt
dbo-tests/conf/: ftrace.fcf  gdb.ini
dbo-tests/scripts/: run-tests.sh
dbo-tests/src/: TestBelongsToTable.hpp  TestCollection.hpp  TestComplexIdTable.hpp  TestCompositeIdTable.hpp  TestCustomIdTable.hpp  TestHasManyTable.hpp  TestManyToManyTable.hpp  TestManyToOneTable.hpp  TestOneToOneTable.hpp  TestPtr.hpp  TestQuery.hpp  TestRequest.hpp  TestSimpleTable.hpp  TestStatement.hpp  TestTransaction.hpp  main.cpp
dbo/action/: ActionOption.cpp  ActionOption.h  BulkInsert.cxx  BulkInsert.hpp  Debug.cxx  Debug.hpp  Delete.cxx  Delete.hpp  InitSchema.cpp  InitSchema.cxx  InitSchema.hpp  Insert.cxx  Insert.hpp  InsertCollection.cxx  InsertCollection.hpp  InsertRelation.cxx  LoadDb.cxx  LoadDb.hpp  LoadId.cxx  LoadId.hpp  SelectById.cxx  SelectById.hpp  SqlInsert.cxx  SqlInsert.hpp  SqlInsertRelation.cxx  SqlInsertRelation.hpp  SqlSelect.cxx  SqlSelect.hpp  SqlSelectById.cpp  SqlSelectById.cxx  SqlSelectById.hpp  SqlSelectCollection.cxx  SqlSelectCollection.hpp  SqlUpdate.cxx  SqlUpdate.hpp  SqlUpdateRelation.cxx  SqlUpdateRelation.hpp  Update.cxx  Update.hpp  UpdateRelation.cxx  (+1 more)
dbo/backend/: Postgres.cpp  Postgres.h
dbo/mapping/: CollectionRef.hpp  Field.h  FieldInfo.cpp  FieldInfo.h  FieldRef.cxx  FieldRef.hpp  ForeignKeyConstraint.cpp  ForeignKeyConstraint.h  IdPrefixStack.cpp  IdPrefixStack.h  JoinId.cpp  JoinId.h  Mapping.cxx  Mapping.hpp  MappingInfo.cpp  MappingInfo.h  PtrRef.cxx  PtrRef.hpp  RefRef.cxx  RefRef.hpp  SetInfo.h  WeakRef.cxx  WeakRef.hpp
dbo/ogr/: OGRException.cpp  OGRException.h  ogr_sql_traits.cpp  ogr_sql_traits.hpp
dbo/stmt/: BulkStatement.cpp  BulkStatement.h  PreparedStatement.cpp  PreparedStatement.h  Statement.cpp  Statement.h
dbo/traits/: SqlPostgresTypes.hpp  StdSqlTraits.cpp  dbo_default_traits.hpp  dbo_traits.hpp  sql_value_traits.hpp  std_sql_traits.cpp  std_sql_traits.hpp
dbo2/: CMakeLists.txt  Exception.h  collection.cxx  collection.hpp  connection.cpp  connection.cxx  connection.h  database.cpp  database.cxx  database.h  dbo.cxx  dbo.hpp  key.cxx  key.hpp  ptr.cxx  ptr.hpp  query.cpp  query.cxx  query.hpp  relation.cxx  relation.hpp  table.cpp  table.hpp  transaction.cpp  transaction.h
dbo2-tests/: CMakeLists.txt
dbo2-tests/conf/: postgis.sql
dbo2-tests/scripts/: run-tests.sh
dbo2-tests/src/: TestBelongsToTable.hpp  TestCollection.hpp  TestComplexIdTable.hpp  TestCompositeIdTable.hpp  TestCustomIdTable.hpp  TestDbo2.hpp  TestHasManyTable.hpp  TestLibpqxx.hpp  TestQuery.hpp  TestRequest.hpp  TestSession.hpp  TestSimpleTable.hpp  TestStatement.hpp  gtest_extend.h  main.cpp
dbo2/action/: ActionOption.cpp  ActionOption.h  BulkInsert.cxx  BulkInsert.hpp  Delete.cxx  Delete.hpp  InitSchema.cpp  InitSchema.cxx  InitSchema.hpp  InitStatement.cxx  InitStatement.hpp  Insert.cxx  Insert.hpp  LoadDb.cxx  LoadDb.hpp  LoadId.cxx  LoadId.hpp  SaveDb.cxx  SaveDb.hpp  SelectById.cxx  SelectById.hpp  Update.cxx  Update.hpp  persist.cxx  persist.hpp
dbo2/mapping/: CollectionRef.hpp  Field.h  FieldInfo.cpp  FieldInfo.h  FieldRef.cxx  FieldRef.hpp  ForeignKeyConstraint.cpp  ForeignKeyConstraint.h  JoinId.cpp  JoinId.h  KeyRef.cxx  KeyRef.hpp  Mapping.cxx  Mapping.hpp  MappingInfo.cpp  MappingInfo.h  PtrRef.cxx  PtrRef.hpp  SetInfo.h
dbo2/stmt/: BulkStatement.cpp  BulkStatement.h  PreparedStatement.cpp  PreparedStatement.h  Statement.cpp  Statement.h
dbo2/traits/: SqlPostgresTypes.hpp  StdSqlTraits.cpp  StdSqlTraits.h  dbo_default_traits.hpp  dbo_traits.hpp  sql_value_traits.hpp
doc/html/: _action_option_8cpp.html  _action_option_8cpp.js  _action_option_8cpp__incl.map  _action_option_8cpp__incl.md5  _action_option_8h.html  _action_option_8h.js  _action_option_8h__dep__incl.map  _action_option_8h__dep__incl.md5  _action_option_8h_source.html  _bulk_insert_8cxx.html  _bulk_insert_8cxx__dep__incl.map  _bulk_insert_8cxx__dep__incl.md5  _bulk_insert_8hpp.html  _bulk_insert_8hpp__dep__incl.map  _bulk_insert_8hpp__dep__incl.md5  _bulk_insert_8hpp__incl.map  _bulk_insert_8hpp__incl.md5  (+637 more)
tests/: CMakeLists.txt
wtdbo/: CMakeLists.txt  Call.cpp  Call.h  Call_impl.h  DbAction.cpp  DbAction.h  DbAction_impl.h  Dbo.h  Exception.cpp  Exception.h  Field.h  Field_impl.h  FixedSqlConnectionPool.cpp  FixedSqlConnectionPool.h  Impl.h  PostgisSqlTraits.cpp  PostgisSqlTraits.h  Query.cpp  Query.h  Query_impl.h  README.txt  Session.cpp  Session.h  Session_impl.h  SqlConnection.cpp  SqlConnection.h  SqlConnectionPool.cpp  SqlConnectionPool.h  SqlQueryParse.cpp  SqlStatement.cpp  SqlStatement.h  SqlTraits.cpp  SqlTraits.h  SqlTraits_impl.h  StdSqlTraits.cpp  StdSqlTraits.h  Transaction.cpp  Transaction.h  Types.h  collection.h  (+7 more)
wtdbo-tests/: CMakeLists.txt
wtdbo-tests/conf/: integration.sql
wtdbo-tests/scripts/: run-tests.sh
wtdbo-tests/src/: TestBelongsToTable.hpp  TestCompositeIdTable.hpp  TestCustomIdTable.hpp  TestHasManyTable.hpp  TestQuery.hpp  TestRequest.hpp  TestSimpleTable.hpp  Tutorial1.hpp  Tutorial2.hpp  main.cpp
(+489 files in other folders)
